<resources>
    <string name="app_name">iBudget</string>
    <string name="summary">Expenditure Summary</string>
    <string name="net_income">Net Income:</string>
    <string name="total_budget">Total Budget:</string>
    <string name="sources_of_income">Income</string>
    <string name="salary">Salary</string>
    <string name="amount_1000000"> 1000000</string>
    <string name="total_budget_10000">Total Budget : 10000</string>
    <string name="transactions">Transactions</string>
    <string name="enter_source_of_income">Enter Source of Income</string>
    <string name="enter_amount">Enter Amount</string>


    <string name="open">open</string>
    <string name="close">close</string>
    <string name="my_debts">My Debts</string>
    <string name="first_bubble_description">Description goes here</string>
    <string name="first_bubble_title">Title</string>
    <string name="second_bubble_description">Descriptio goes here</string>
    <string name="second_bubble_title">Title 2</string>
    <string name="third_bubble_description">Description goes here</string>
    <string name="third_bubble_title">"Title 3 "</string>
    <string name="heading_text">Header</string>
    <string name="button_text_next">Next</string>
    <string name="button_text_previous">Previous</string>
    <string name="button_text_complete">Complete</string>
    <string name="save">Save</string>
    <string name="menu_notification">Notification</string>
    <string name="dashboard">DashBoard</string>
    <string name="category_prompt">Category</string>
    <string name="initial_budget">Initial Budget</string>
    <string name="payee">Payee</string>
    <string name="balance">Balance</string>
    <string name="head">Head</string>
    <string name="newly_install">CleanInstallation</string>
    <string name="skip_into">SKIP</string>
    <string name="next">Continue</string>
    <string name="add_debt">Add Debt</string>
    <string name="amount">Amount</string>
    <string name="submit">Submit</string>
    <string name="budget_amount">Budget Amount</string>
    <string name="_month">November Financial Summary</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="my_budgets">Budgets</string>
    <string name="create_budget">Create Budget</string>
    <string name="add_income">Add Income</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="policy">Policy</string>


    <string-array name="category">
        <item>Food</item>
        <item>Rent</item>
        <item>Health</item>
        <item>Education</item>
        <item>Transport</item>
        <item>Electricity</item>
        <item>Fitness</item>
        <item>Misc Payments</item>
        <item>Water</item>
        <item>Other</item>
    </string-array>

    <string-array name="accounts">
        <item>Cash</item>
        <item>Bank</item>
    </string-array>

</resources>