<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/transactionsFragment"
            android:icon="@drawable/ic_double_arrow"
            android:title="@string/transactions" />
        <item
            android:id="@+id/debtsFragments"
            android:icon="@drawable/ic_credit_card"
            android:title="@string/my_debts" />
        <item
            android:id="@+id/budgetFragment"
            android:icon="@drawable/ic_money_bag"
            android:title="@string/my_budgets" />
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/createBudgetFragment"
                android:title="@string/create_budget" />
            <item android:id="@+id/addDebtsFragment"
                android:title="@string/add_debt" />
        </menu>
    </item>
</menu>