<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_marginTop="5dp"
android:layout_marginEnd="8dp"
android:layout_marginStart="8dp"
android:background="@color/white"
android:orientation="horizontal"
android:padding="10dp">

<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/transaction_details"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/head"
    android:textColor="@color/blue"
    android:fontFamily="@font/roboto_bold"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/tv_amount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/initial_budget"
    android:fontFamily="@font/roboto_bold"
    android:textColor="@color/blue"
    app:layout_constraintStart_toEndOf="@id/transaction_details"
    app:layout_constraintEnd_toStartOf="@id/transacted_amount"
    app:layout_constraintTop_toTopOf="@id/transaction_details" />


<androidx.appcompat.widget.AppCompatTextView
    android:id="@+id/transacted_amount"
    style="@style/TextAppearance.AppCompat.Small"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_gravity="top"
    android:layout_weight="1"
    android:gravity="center_horizontal"
    android:text="@string/balance"
    android:fontFamily="@font/roboto_bold"
    android:textColor="@color/amount_text_color"
    android:textSize="16sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="@id/transaction_details" />
</androidx.constraintlayout.widget.ConstraintLayout>